--- a/HajosTeszt/HajosTeszt/wwwroot/cv.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv.html
@@ -3,49 +3,64 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="cv.css" rel="stylesheet">
+
 </head>
 <body>
-
-    <h1>BEINSCHRÓDT MÁRK</h1>
-    <img src="Márk.jpg" alt="Beinschródt Márk képe">
-    <h2>Személyes adatok</h2>
-    <p>
-        Születési dátum, hely: 1998. 02. 02., Békéscsaba<br />
-        Lakcím: 5622 Köröstarcsa, Tavasz utca 38/A<br />
-        Telefon: +36300138722<br />
-        E-mail: b.tibormark@gmail.com<br />
-    </p>
-    <h2>Iskolai tanulmányok</h2>
-    <p>
-        2012-2016 Békéscsabai Belvárosi Gimnázium – érettségi<br />
-        2016-2018 Semmelweis Egyetem Gyógyszerésztudományi Kar – befejezetlen tanulmány<br />
-        2019- Budapesti Corvinus Egyetem (Gazdaságinformatikus BSc) – jelenlegi tanulmány<br />
-    </p>
-    <h2>Munkatapasztalat</h2>
-    <p>
-        2017-2018 Zara Magyarország Kft. - eladó, pénztáros<br />
-        2018-2019 Sparrow Café - vendéglátás<br />
-        2019-2020 Cinema City – kasszás<br />
-        2020 Pull&Bear – eladó, pénztáros<br />
-        2020-2021 Meló-Diák – weblapok tesztelése, stratégiai fejlesztése<br />
-    </p>
-    <h2>Nyelvtudás</h2>
-    <ol>
-        <li>Angol B2</li>
-        <li>Német A2</li>
-        <li>Spanyol A2</li>
-    </ol>
-    <h2>Készségek, tulajdonságok</h2>
-    <ul>
-        <li>megbízható, tudatos</li>
-        <li>kreatív</li>
-        <li>szorgalmas, kitartó</li>
-        <li>empatikus, jó kapcsolatépítő</li>
-    </ul>
-    <h2>Érdeklődés</h2>
-    <p>
-        Tánc, mozgás, zene, sport, videózás, online marketing/közösségi média, tartalomgyártás <br />(Adobe: Photoshop, Illustrator, Lightroom, Premiere Pro, After Effects), szövegírás, állatok, tehetséges emberek
-    </p>
-    <a href="https://www.instagram.com/dancenemyzz/">Itt látható az egyik kreatív projektem</a>
+    <div id="egesz">
+        <div id="fejlec">
+            <h1>BEINSCHRÓDT MÁRK</h1>
+            <img src="Márk.jpg" alt="Beinschródt Márk képe">
+        </div>
+        <div id="szadatok">
+            <h2>Személyes adatok</h2>
+            <p>
+                <span class="fel">Születési dátum, hely:</span> 1998. 02. 02., Békéscsaba<br />
+                <span class="fel">Lakcím:</span> 5622 Köröstarcsa, Tavasz utca 38/A<br />
+                <span class="fel">Telefon:</span> +36300138722<br />
+                <span class="fel">E-mail:</span> b.tibormark@gmail.com<br />
+            </p>
+        </div>
+        <div id="tanulmanyok">
+            <h2>Iskolai tanulmányok</h2>
+            <p>
+                <span class="fel">2012-2016</span> Békéscsabai Belvárosi Gimnázium - <span class="dolt">érettségi</span><br />
+                <span class="fel">2016-2018</span> Semmelweis Egyetem Gyógyszerésztudományi Kar - <span class="dolt">befejezetlen tanulmány</span><br />
+                <span class="fel">2019-</span> Budapesti Corvinus Egyetem (Gazdaságinformatikus BSc) - <span class="dolt">jelenlegi tanulmány</span><br />
+            </p>
+        </div>
+        <div id="munka">
+            <h2>Munkatapasztalat</h2>
+            <p>
+                <span class="fel">2017-2018</span> Zara Magyarország Kft. - <span class="dolt">eladó, pénztáros</span><br />
+                <span class="fel">2018-2019</span> Sparrow Café - <span class="dolt">vendéglátás</span><br />
+                <span class="fel">2019-2020</span> Cinema City - <span class="dolt">kasszás</span><br />
+                <span class="fel">2020</span> Pull&Bear - <span class="dolt">eladó, pénztáros</span><br />
+                <span class="fel">2020-2021</span> Meló-Diák - <span class="dolt">weblapok tesztelése, stratégiai fejlesztése</span><br />
+            </p>
+        </div>
+        <div id="listak">
+            <h3>Nyelvtudás</h3>
+            <ol class="elso">
+                <li>Angol B2</li>
+                <li>Német A2</li>
+                <li>Spanyol A2</li>
+            </ol>
+            <h3>Készségek, tulajdonságok</h3>
+            <ul class="masodik">
+                <li>megbízható, tudatos</li>
+                <li>kreatív</li>
+                <li>szorgalmas, kitartó</li>
+                <li>empatikus, jó kapcsolatépítő</li>
+            </ul>
+        </div>
+        <div id="vege">
+            <h2>Érdeklődés</h2>
+            <p>
+                Tánc, mozgás, zene, sport, videózás, online marketing/közösségi média, tartalomgyártás <br /><span class="dolt">(Adobe: Photoshop, Illustrator, Lightroom, Premiere Pro, After Effects)</span>, szövegírás, állatok, tehetséges emberek
+            </p>
+            <a href="https://www.instagram.com/dancenemyzz/">ITT LÁTHATÓ AZ EGYIK KREATÍV PROJEKTEM</a>
+        </div>
+    </div>
 </body>
 </html>
