--- a/HajosTeszt/HajosTeszt/wwwroot/cv2.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv2.html
@@ -58,8 +58,8 @@
     </div>
     <div id="vege">
         <h2>Érdeklődés</h2>
-        <p>
-            Tánc, mozgás, zene, sport, videózás, online marketing/közösségi média, tartalomgyártás <br /><span class="dolt">(Adobe: Photoshop, Illustrator, Lightroom, Premiere Pro, After Effects)</span>, szövegírás, állatok, tehetséges emberek
+        <p class="infokrolam">
+            Tánc, mozgás, zene, sport, videózás, online marketing/közösségi média, tartalomgyártás <br /><span class="dolt">(Adobe: Photoshop, Illustrator, Lightroom, Premiere Pro, After Effects),</span> szövegírás, állatok, tehetséges emberek
         </p>
         <div id="link">
             <a href="https://www.instagram.com/mvrksenemy/">ITT LÁTHATÓ AZ EGYIK KREATÍV PROJEKTEM</a>
