--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -5,6 +5,8 @@
     <title></title>
     <link href="hajo.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="hetedik.js"></script>
+    <meta http-equiv="Cache-Control" content="no-store" />
 </head>
 <body>
     <div id="külső">
@@ -15,16 +17,16 @@
         <div id="középső">
             <div id="válaszok">
                 <div id="válasz1" class="kerdes kattintható">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattintható jó">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattintható rossz">Válasz 3</div>
+                <div id="válasz2" class="kerdes kattintható">Válasz 2</div>
+                <div id="válasz3" class="kerdes kattintható">Válasz 3</div>
             </div>
             <div id="kép">
-                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
+                <img id="kép1"/>
             </div>
         </div>
         <div id="vezérlő">
-            <div class="gomb kattintható">Vissza</div>
-            <div class="gomb kattintható">Előre</div>
+            <div id="vissza" class="gomb kattintható">Vissza</div>
+            <div id="elore" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
