--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -5,7 +5,7 @@
     <title></title>
     <link href="hajo.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="hetedik.js"></script>
+    <script src="tizedik.js"></script>
     <meta http-equiv="Cache-Control" content="no-store" />
 </head>
 <body>
@@ -16,9 +16,9 @@
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattintható">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattintható">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattintható">Válasz 3</div>
+                <div id="válasz1" onclick="valasztas(1)" class="kerdes kattintható">Válasz 1</div>
+                <div id="válasz2" onclick="valasztas(2)" class="kerdes kattintható">Válasz 2</div>
+                <div id="válasz3" onclick="valasztas(3)" class="kerdes kattintható">Válasz 3</div>
             </div>
             <div id="kép">
                 <img id="kép1"/>
